--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DATABASE_URL = 'mongodb+srv://ObianujuRestAPI:56789@cluster0.huoachw.mongodb.net/videos?retryWrites=true&w=majority'
+DATABASE_URL = mongodb+srv://ObianujuRestAPI:56789@cluster0.huoachw.mongodb.net/videos?retryWrites=true&w=majority
 DEEPGRAM_API_KEY = '5c0b23ad241f745d978d13589e6bea8ba7065440'
