--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
 PORT=3000
-DATABASE_URL= mongodb://localhost:27017/video_database
+DATABASE_URL=your_db_url
 DEEPGRAM_API_KEY=your_deepgram_api_key_here
