--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongoose": "^7.5.3",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1",
+    "swagger-jsdoc": "^6.2.8",
     "uuid": "^9.0.1"
   }
 }
