--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1",
     "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0",
     "uuid": "^9.0.1"
   }
 }
