--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
 PORT=3000
 DATABASE_URL=your_db_url
 DEEPGRAM_API_KEY=your_deepgram_api_key_here
+CLOUDINARY_CLOUD_NAME = your_cloudinary_cloud_name
+CLOUDINARY_API_KEY = your_cloudinary_api_key
+CLOUDINARY_API_SECRET = your_cloudinary_api_secret
+
